# keel

./: .gitignore  .keel.yml  ARCHITECTURE.md  KEEL-BUILD-GUIDE-V2.md  KEEL_OPERATIONS_GUIDE.md  MEMORY_ARCHITECTURE.md  README.md  buildkeelupdates.md  pyproject.toml
.github/workflows/: docs.yml  keel.yml  publish.yml
demo-app/: .keel.yml
demo-app/src/components/: Dashboard.tsx
demo-app/src/db/: users.ts
demo-app/src/services/: userService.ts
demo-app/tests/: userService.test.ts
docs/: index.html
docs/adr/: 0001-ui-database-boundary.md
keel/: __init__.py  adr.py  agent_setup.py  brief.py  check.py  cli.py  config.py  contracts.py  dashboard.py  discover.py  evals.py  graph.py  graph_quality.py  graphify_runner.py  hooks.py  layers.py  manager.py  memory.py  memory_architecture.py  models.py  onboard.py  pr_comment.py  record.py  repair.py  report.py  rules.py  serve.py  webhook.py
schemas/: check-result.schema.json  event.schema.json  proposal.schema.json
scripts/: demo.ps1
tests/: test_brief_record_serve.py  test_check.py  test_cli.py  test_config.py  test_discover.py  test_graph.py  test_layers.py  test_memory.py  test_repair.py  test_rules.py  test_webhook.py
tests/fixtures/: .keel.yml  guide.keel.yml  sample.keel.yml  sample_clean_graph.json  sample_graph.json  sample_regressed_graph.json
