[project]
name = "keel"
version = "0.1.0"
description = "Architecture regression tests for AI-generated code, powered by Graphify."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "networkx>=3.0",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
keel = "keel.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

