[project]
name = "keel-arch"
version = "0.1.0"
description = "Blackbox recorder and Graphify launcher for coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  {name = "Keel Contributors"},
]
keywords = ["agent-memory", "blackbox", "graphify", "ai-code", "mcp", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "networkx>=3.0",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "typer>=0.12",
  "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
keel = "keel.cli:app"

[project.urls]
Homepage = "https://github.com/RushiAgrawal2004/keel"
Repository = "https://github.com/RushiAgrawal2004/keel"
Issues = "https://github.com/RushiAgrawal2004/keel/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["keel*"]
